--- a/index.html
+++ b/index.html
@@ -157,9 +157,8 @@
           </div>
           <div class="card">
             <div class="form-stack">
-              <input id="name" placeholder="👤 Név (opcionális)" />
-              <input id="age" placeholder="🎂 Életkor" type="text" inputmode="numeric" data-numeric="int" />
-              <input id="city" placeholder="📍 Település" />
+              <input id="age" placeholder="🎂 Életkor (opcionális)" type="text" inputmode="numeric" data-numeric="int" />
+              <input id="city" placeholder="📍 Település (opcionális)" />
               <input id="income" placeholder="💰 Havi nettó jövedelem (Ft)" type="text" inputmode="numeric" data-numeric="int" />
               <input id="hours" placeholder="⏰ Heti munkaóra" type="text" inputmode="decimal" data-numeric="float" />
               <button onclick="saveProfile()">💾 Mentés és továbblépés</button>
